--- a/css/main.css
+++ b/css/main.css
@@ -1,25 +1,132 @@
+* {
+  -webkit-box-sizing: border-box !important;
+  -moz-box-sizing: border-box !important;
+  box-sizing: border-box !important;
+  -webkit-tap-highlight-color: transparent;
+  position: relative;
+  outline: none;
+}
+*:after, *:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  position: relative;
+}
 html,body{
-	/*font-family: 'Montserrat', sans-serif;*/
-	background-color: #2c3e50;
+	min-height: 100%;
+	background-color: #EFF2F7;
+	font-family: 'Roboto','Helvetica Neue',Helvetica, Arial, sans-serif;
+  font-variant-ligatures: no-common-ligatures;
+  -webkit-font-variant-ligatures: no-common-ligatures;
 }
-h1{
-	font-family: 'Pacifico', cursive;
-	font-size: 56px;
-	color: #2C3E50;
+a {
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
 }
-form{
-	font-size: 16pt;
+textarea{
+	border: 1px solid #2b579a;
+}
+
+.section-hero{
+	width: 100%;
+	min-height: 80vh;
+	display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.section-hero p{
+	color: #000;
+	font-weight: 500;
+	font-size: 3rem;
+	opacity: 0.1;
+	font-family: 'Spectral SC', serif;
+}
+.section-hero h1{
+	color: #000;
+	font-weight: 800;
+	font-size: 5rem;
+	opacity: 0.2;
+	font-family: 'Spectral SC', serif;
 }
 .content{
-	/*background-color: #F7F7F9;*/
-	background-image: url("/img/texture.png");
-	max-width: 1200px;
-	margin: 15px auto;
+	text-align: center;
+	max-width: 700px;
+}
+.input-card{
+	padding: 0;
+	margin: 40px;
+	background-color: #fff;
+	box-shadow: 0 0 30px 10px rgba(229,232,235,1), 0 0 0 transparent;
+	border-top-left-radius: 5px; 
+	border-top-right-radius: 5px; 
+}
+.card2{
+	margin-top: 100px;
+}
+.card-thumb{
+	width: 100%;
+	/*height: 200px;*/
+	color: #fff;
+  background: #A389F4; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(#A389F4, #7E5BEF); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#A389F4, #7E5BEF); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#A389F4, #7E5BEF); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#A389F4, #7E5BEF); /* Standard syntax */
+	border-top-left-radius: 5px; 
+	border-top-right-radius: 5px; 
 	padding: 40px;
-	-webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
-	-moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
-	box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+	font-weight: 300;
+	font-size: 3rem;
+	text-align: center;
 }
-.description{
-	font-size: 20pt;
+.card-joint{
+	width: 100%;
+	height: 10px;
+	background-color: #7E5BEF;
+	border-bottom-left-radius: 5px; 
+	border-bottom-right-radius: 5px; 
 }
+.bg-poly1{
+	height: 200px;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	background-color: #EFF2F7;
+	opacity: 0.3;
+	-webkit-clip-path: polygon(0 0, 0 20%, 100% 0);
+	clip-path: polygon(0 0, 0 20%, 100% 0);
+}
+.bg-poly2{
+	/*height: 500px;*/
+	width: 100%;
+	background-color: #1F2D3D;
+	/*opacity: 0.1;*/
+	-webkit-clip-path: polygon(0 0, 100% 20%, 100% 100%, 0% 100%);
+	clip-path: polygon(0 0, 100% 20%, 100% 100%, 0% 100%);
+	margin-top: 100px;
+	padding-top: 100px;
+}
+.section-footer{
+	width: 100%;
+	min-height: 80vh;
+	padding: 40px;
+	display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.section-footer h2{
+	color: #fff;
+	font-weight: 500;
+	font-size: 3rem;
+	opacity: 0.15;
+	font-family: 'Spectral SC', serif;
+}
+.section-footer p{
+	color: #fff;
+	font-weight: 300;
+	font-size: 2rem;
+	opacity: 0.1;
+	font-family: 'Spectral SC', serif;
+}
+
