--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,33 @@ a {
 textarea{
 	border: 1px solid #2b579a;
 }
+.button {
+	padding: 10px 15px;
+	border-radius: 2px;
+	display: inline-block;
+	background-color: #FF5216;
+	font-weight: 400;
+	border: 1px solid #FF5216;
+	cursor: pointer;
+	text-decoration: none;
+	font-family: Roboto;
+	font-size: 1rem;
+	margin-bottom: 15px;
+	color: #fff;
+	box-shadow: 0 0 30px 0 rgba(30,30,30,0.1), 0 0 0 transparent;
+	transition: 300ms all;
+}
+.button:visited {
+	color: #fff;
+	text-decoration: none;
+}
+.button:hover {
+	color: #fff;
+	background-color: $blue;
+	text-decoration: none;
+	transform: translateY(-1px);
+	box-shadow: 0 0 30px 0px rgba(30,30,30,0.2), 0 0 0 transparent;
+}
 
 .section-hero{
 	width: 100%;
@@ -61,6 +88,9 @@ textarea{
 	border-top-left-radius: 5px; 
 	border-top-right-radius: 5px; 
 }
+.card1 p{
+	margin-bottom: 10px;
+}
 .card2{
 	margin-top: 100px;
 }
@@ -76,7 +106,7 @@ textarea{
 	border-top-left-radius: 5px; 
 	border-top-right-radius: 5px; 
 	padding: 40px;
-	font-weight: 300;
+	font-weight: 200;
 	font-size: 3rem;
 	text-align: center;
 }
