--- a/css/main.css
+++ b/css/main.css
@@ -1,162 +1,291 @@
-* {
-  -webkit-box-sizing: border-box !important;
-  -moz-box-sizing: border-box !important;
-  box-sizing: border-box !important;
-  -webkit-tap-highlight-color: transparent;
-  position: relative;
-  outline: none;
-}
-*:after, *:before {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: transparent;
-  position: relative;
-}
-html,body{
-	min-height: 100%;
-	background-color: #EFF2F7;
-	font-family: 'Roboto','Helvetica Neue',Helvetica, Arial, sans-serif;
-  font-variant-ligatures: no-common-ligatures;
-  -webkit-font-variant-ligatures: no-common-ligatures;
-}
-a {
-  color: inherit; /* blue colors for links too */
-  text-decoration: inherit; /* no underline */
-}
-textarea{
-	border: 1px solid #2b579a;
-}
-.button {
-	padding: 10px 15px;
-	border-radius: 2px;
-	display: inline-block;
-	background-color: #FF5216;
-	font-weight: 400;
-	border: 1px solid #FF5216;
-	cursor: pointer;
-	text-decoration: none;
-	font-family: Roboto;
-	font-size: 1rem;
-	margin-bottom: 15px;
-	color: #fff;
-	box-shadow: 0 0 30px 0 rgba(30,30,30,0.1), 0 0 0 transparent;
-	transition: 300ms all;
-}
-.button:visited {
-	color: #fff;
-	text-decoration: none;
-}
-.button:hover {
-	color: #fff;
-	background-color: $blue;
-	text-decoration: none;
-	transform: translateY(-1px);
-	box-shadow: 0 0 30px 0px rgba(30,30,30,0.2), 0 0 0 transparent;
+/*! HTML5 Boilerplate v6.0.1 | MIT License | https://html5boilerplate.com/ */
+
+/*
+ * What follows is the result of much research on cross-browser styling.
+ * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
+ * Kroc Camen, and the H5BP dev community and team.
+ */
+
+/* ==========================================================================
+   Base styles: opinionated defaults
+   ========================================================================== */
+
+html {
+    color: #222;
+    font-size: 1em;
+    line-height: 1.4;
 }
 
-.section-hero{
-	width: 100%;
-	min-height: 80vh;
-	display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.section-hero p{
-	color: #000;
-	font-weight: 500;
-	font-size: 3rem;
-	opacity: 0.1;
-	font-family: 'Spectral SC', serif;
-}
-.section-hero h1{
-	color: #000;
-	font-weight: 800;
-	font-size: 5rem;
-	opacity: 0.2;
-	font-family: 'Spectral SC', serif;
-}
-.content{
-	text-align: center;
-	max-width: 700px;
-}
-.input-card{
-	padding: 0;
-	margin: 40px;
-	background-color: #fff;
-	box-shadow: 0 0 30px 10px rgba(229,232,235,1), 0 0 0 transparent;
-	border-top-left-radius: 5px; 
-	border-top-right-radius: 5px; 
-}
-.card1 p{
-	margin-bottom: 10px;
-}
-.card2{
-	margin-top: 100px;
-}
-.card-thumb{
-	width: 100%;
-	/*height: 200px;*/
-	color: #fff;
-  background: #A389F4; /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(#A389F4, #7E5BEF); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(#A389F4, #7E5BEF); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(#A389F4, #7E5BEF); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(#A389F4, #7E5BEF); /* Standard syntax */
-	border-top-left-radius: 5px; 
-	border-top-right-radius: 5px; 
-	padding: 40px;
-	font-weight: 200;
-	font-size: 3rem;
-	text-align: center;
-}
-.card-joint{
-	width: 100%;
-	height: 10px;
-	background-color: #7E5BEF;
-	border-bottom-left-radius: 5px; 
-	border-bottom-right-radius: 5px; 
-}
-.bg-poly1{
-	height: 200px;
-	width: 100%;
-	position: absolute;
-	top: 0;
-	background-color: #EFF2F7;
-	opacity: 0.3;
-	-webkit-clip-path: polygon(0 0, 0 20%, 100% 0);
-	clip-path: polygon(0 0, 0 20%, 100% 0);
-}
-.bg-poly2{
-	/*height: 500px;*/
-	width: 100%;
-	background-color: #1F2D3D;
-	/*opacity: 0.1;*/
-	-webkit-clip-path: polygon(0 0, 100% 20%, 100% 100%, 0% 100%);
-	clip-path: polygon(0 0, 100% 20%, 100% 100%, 0% 100%);
-	margin-top: 100px;
-	padding-top: 100px;
-}
-.section-footer{
-	width: 100%;
-	min-height: 80vh;
-	padding: 40px;
-	display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.section-footer h2{
-	color: #fff;
-	font-weight: 500;
-	font-size: 3rem;
-	opacity: 0.15;
-	font-family: 'Spectral SC', serif;
-}
-.section-footer p{
-	color: #fff;
-	font-weight: 300;
-	font-size: 2rem;
-	opacity: 0.1;
-	font-family: 'Spectral SC', serif;
+/*
+ * Remove text-shadow in selection highlight:
+ * https://twitter.com/miketaylr/status/12228805301
+ *
+ * Vendor-prefixed and regular ::selection selectors cannot be combined:
+ * https://stackoverflow.com/a/16982510/7133471
+ *
+ * Customize the background color to match your design.
+ */
+
+::-moz-selection {
+    background: #b3d4fc;
+    text-shadow: none;
 }
 
+::selection {
+    background: #b3d4fc;
+    text-shadow: none;
+}
+
+/*
+ * A better looking default horizontal rule
+ */
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
+}
+
+/*
+ * Remove the gap between audio, canvas, iframes,
+ * images, videos and the bottom of their containers:
+ * https://github.com/h5bp/html5-boilerplate/issues/440
+ */
+
+audio,
+canvas,
+iframe,
+img,
+svg,
+video {
+    vertical-align: middle;
+}
+
+/*
+ * Remove default fieldset styles.
+ */
+
+fieldset {
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
+
+/*
+ * Allow only vertical resizing of textareas.
+ */
+
+textarea {
+    resize: vertical;
+}
+
+/* ==========================================================================
+   Browser Upgrade Prompt
+   ========================================================================== */
+
+.browserupgrade {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
+}
+
+/* ==========================================================================
+   Author's custom styles
+   ========================================================================== */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ==========================================================================
+   Helper classes
+   ========================================================================== */
+
+/*
+ * Hide visually and from screen readers
+ */
+
+.hidden {
+    display: none !important;
+}
+
+/*
+ * Hide only visually, but have it available for screen readers:
+ * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
+ *
+ * 1. For long content, line feeds are not interpreted as spaces and small width
+ *    causes content to wrap 1 word per line:
+ *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
+ */
+
+.visuallyhidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    -webkit-clip-path: inset(50%);
+    clip-path: inset(50%);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+    white-space: nowrap; /* 1 */
+}
+
+/*
+ * Extends the .visuallyhidden class to allow the element
+ * to be focusable when navigated to via the keyboard:
+ * https://www.drupal.org/node/897638
+ */
+
+.visuallyhidden.focusable:active,
+.visuallyhidden.focusable:focus {
+    clip: auto;
+    -webkit-clip-path: none;
+    clip-path: none;
+    height: auto;
+    margin: 0;
+    overflow: visible;
+    position: static;
+    width: auto;
+    white-space: inherit;
+}
+
+/*
+ * Hide visually and from screen readers, but maintain layout
+ */
+
+.invisible {
+    visibility: hidden;
+}
+
+/*
+ * Clearfix: contain floats
+ *
+ * For modern browsers
+ * 1. The space content is one way to avoid an Opera bug when the
+ *    `contenteditable` attribute is included anywhere else in the document.
+ *    Otherwise it causes space to appear at the top and bottom of elements
+ *    that receive the `clearfix` class.
+ * 2. The use of `table` rather than `block` is only necessary if using
+ *    `:before` to contain the top-margins of child elements.
+ */
+
+.clearfix:before,
+.clearfix:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+/* ==========================================================================
+   EXAMPLE Media Queries for Responsive Design.
+   These examples override the primary ('mobile first') styles.
+   Modify as content requires.
+   ========================================================================== */
+
+@media only screen and (min-width: 35em) {
+    /* Style adjustments for viewports that meet the condition */
+}
+
+@media print,
+       (-webkit-min-device-pixel-ratio: 1.25),
+       (min-resolution: 1.25dppx),
+       (min-resolution: 120dpi) {
+    /* Style adjustments for high resolution devices */
+}
+
+/* ==========================================================================
+   Print styles.
+   Inlined to avoid the additional HTTP request:
+   http://www.phpied.com/delay-loading-your-print-css/
+   ========================================================================== */
+
+@media print {
+    *,
+    *:before,
+    *:after {
+        background: transparent !important;
+        color: #000 !important; /* Black prints faster:
+                                   http://www.sanbeiji.com/archives/953 */
+        box-shadow: none !important;
+        text-shadow: none !important;
+    }
+
+    a,
+    a:visited {
+        text-decoration: underline;
+    }
+
+    a[href]:after {
+        content: " (" attr(href) ")";
+    }
+
+    abbr[title]:after {
+        content: " (" attr(title) ")";
+    }
+
+    /*
+     * Don't show links that are fragment identifiers,
+     * or use the `javascript:` pseudo protocol
+     */
+
+    a[href^="#"]:after,
+    a[href^="javascript:"]:after {
+        content: "";
+    }
+
+    pre {
+        white-space: pre-wrap !important;
+    }
+    pre,
+    blockquote {
+        border: 1px solid #999;
+        page-break-inside: avoid;
+    }
+
+    /*
+     * Printing Tables:
+     * http://css-discuss.incutio.com/wiki/Printing_Tables
+     */
+
+    thead {
+        display: table-header-group;
+    }
+
+    tr,
+    img {
+        page-break-inside: avoid;
+    }
+
+    p,
+    h2,
+    h3 {
+        orphans: 3;
+        widows: 3;
+    }
+
+    h2,
+    h3 {
+        page-break-after: avoid;
+    }
+}
