--- a/css/main.css
+++ b/css/main.css
@@ -97,10 +97,110 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+html,body{
+  min-height: 100%;
+  background-color: #F9FAFC;
+  /*font-family: 'Open Sans','Roboto','Helvetica Neue',Helvetica, Arial, sans-serif;*/
+  font-family: 'Roboto','Helvetica Neue',Helvetica, Arial, sans-serif;
+  /*font-family: 'Montserrat', sans-serif;*/
+  /*font-family: 'Playfair Display', serif;*/
+  /*font-family: 'Zilla Slab Highlight', cursive;*/
+}
+
+h1{
+  font-size: 2rem;
+  font-weight: 100;
+  letter-spacing: 4px;
+}
+h2{ 
+  font-size: 2.5rem;
+  font-weight: 100;
+}
+h3{
+  font-size: 2.5rem;
+  font-weight: 300;
+}
+h6{
+  font-size: 1rem;
+  font-weight: 200;
+  opacity: .5;
+}
+p{
+  font-size: 1rem;
+  font-weight: 200;
+  opacity: .5;
+}
+a {
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+}
+.container-fluid{
+  margin: 0;
+  padding: 0;
+}
+.section-hero{
+  height: 100vh;
+  width: 100%;
+}
+.section-1{
+  /*background-color: #f0f0f0;*/
+}
+.content{
+  padding: 80px;
+  color: #000;
+}
+.hero-image{
+  /*max-width: 100%;*/
+  /*height: 100%;*/
+  max-width: 100%;
+  max-height: 600px;
+/*  background: url(../img/compressed/mockup.png) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;*/
+}
+.footer{
+  background-color: #f5f5f5;
+}
+.footer p{
+  font-size: 12px;
+}
+.input-card{
+  padding: 20px;
+}
 
 
 
 
+
+.button {
+  padding: 10px 15px;
+  border-radius: 2px;
+  display: inline-block;
+  background-color: #85D7FF;
+  font-weight: 400;
+  border: 1px solid #85D7FF;
+  cursor: pointer;
+  text-decoration: none;
+  font-family: Roboto;
+  font-size: 1rem;
+  margin-bottom: 15px;
+  color: #fff;
+  box-shadow: 0 0 10px 0 rgba(10,10,10,0.1), 0 0 0 transparent;
+  transition: 300ms all;
+}
+.button:visited {
+  color: #fff;
+  text-decoration: none;
+}
+.button:hover {
+  color: #fff;
+  background-color: #85D7FF;
+  text-decoration: none;
+  transform: translateY(-1px);
+  box-shadow: 0 0 10px 0px rgba(10,10,10,0.2), 0 0 0 transparent;
+}
 
 
 
@@ -116,6 +216,18 @@ textarea {
 /* ==========================================================================
    Helper classes
    ========================================================================== */
+
+
+
+
+.center-flex{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.text-center{
+  text-align: center;
+}
 
 /*
  * Hide visually and from screen readers
@@ -203,8 +315,17 @@ textarea {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
+@media only screen and (max-width: 768px) {
     /* Style adjustments for viewports that meet the condition */
+  .content{
+    padding: 40px;
+  }
+}
+@media only screen and (max-width: 320px) {
+    /* Style adjustments for viewports that meet the condition */
+  .content{
+    padding: 20px;
+  }
 }
 
 @media print,
