--- a/css/main.css
+++ b/css/main.css
@@ -100,35 +100,37 @@ textarea {
 html,body{
   min-height: 100%;
   background-color: #F9FAFC;
-  /*font-family: 'Open Sans','Roboto','Helvetica Neue',Helvetica, Arial, sans-serif;*/
-  font-family: 'Roboto','Helvetica Neue',Helvetica, Arial, sans-serif;
-  /*font-family: 'Montserrat', sans-serif;*/
-  /*font-family: 'Playfair Display', serif;*/
-  /*font-family: 'Zilla Slab Highlight', cursive;*/
+  /* font-family: 'Roboto','Helvetica Neue',Helvetica, Arial, sans-serif; */
+  font-family: 'Raleway', sans-serif;
 }
 
 h1{
-  font-size: 2rem;
-  font-weight: 100;
-  letter-spacing: 4px;
+  font-size: 3rem;
+  font-weight: 400;
+  /* letter-spacing: 4px; */
+  /* font-family: 'Raleway', sans-serif; */
+  font-family: 'Comfortaa', cursive;
 }
-h2{ 
+h2{
   font-size: 2.5rem;
-  font-weight: 100;
+  font-weight: 400;
+  /* font-family: 'Raleway', sans-serif; */
+  font-family: 'Comfortaa', cursive;
 }
 h3{
   font-size: 2.5rem;
-  font-weight: 300;
+  font-weight: 400;
 }
 h6{
   font-size: 1rem;
-  font-weight: 200;
+  font-weight: 400;
   opacity: .5;
 }
 p{
   font-size: 1rem;
-  font-weight: 200;
+  font-weight: 400;
   opacity: .5;
+  line-height: 30px;
 }
 a {
   color: inherit; /* blue colors for links too */
@@ -142,24 +144,72 @@ a {
   height: 100vh;
   width: 100%;
 }
+.section-hero-app{
+  background-color: #85D7FF;
+}
+.section-hero-app h1, .section-hero-app h6{
+  color: #fff !important;
+}
+.content-hero{
+  margin-bottom: -400px;
+  z-index: 10;
+}
 .section-1{
-  /*background-color: #f0f0f0;*/
+  margin-top: -200px;
+  padding-top: 100px;
+  background-color: #ffffff;
+  -webkit-clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
+  clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
+}
+.content-section-1{
+  z-index: 10;
 }
 .content{
   padding: 80px;
   color: #000;
 }
-.hero-image{
-  /*max-width: 100%;*/
-  /*height: 100%;*/
-  max-width: 100%;
-  max-height: 600px;
-/*  background: url(../img/compressed/mockup.png) no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;*/
+
+
+/* Notebook */
+.section-notebook{
+  margin-top: -200px;
+  /* z-index: -1; */
 }
+.notebook-paper {
+  width: 960px;
+  /* height: 1109px; */
+  height: 400px;
+  background: linear-gradient(to bottom, white 29px, #00b0d7 1px);
+  margin: 0 auto;
+  background-size: 100% 30px;
+  position: relative;
+  overflow: hidden;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  box-shadow: 0 0 30px 0 rgba(229,232,235,0.9), 0 0 0 transparent;
+}
+.notebook-paper:before {
+  content: '';
+  display: block;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 140px;
+  height: 100%;
+  width: 1px;
+  background: #db4034;
+}
+.notebook-paper .header {
+  height: 150px;
+  width: 100%;
+  background: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+/* footer */
+
 .footer{
   background-color: #f5f5f5;
 }
@@ -169,7 +219,10 @@ a {
 .input-card{
   padding: 20px;
 }
-
+.spacer{
+  height: 100px;
+  width: 100%;
+}
 
 
 
@@ -183,7 +236,6 @@ a {
   border: 1px solid #85D7FF;
   cursor: pointer;
   text-decoration: none;
-  font-family: Roboto;
   font-size: 1rem;
   margin-bottom: 15px;
   color: #fff;
@@ -201,12 +253,151 @@ a {
   transform: translateY(-1px);
   box-shadow: 0 0 10px 0px rgba(10,10,10,0.2), 0 0 0 transparent;
 }
+.button-c1{
+  background-color: #FF7849;
+  border: 1px solid #FF7849;
+  color: #fff;
+}
+.button-c1:visited{
+  color: #fff;
+}
+.button-c1:hover{
+  background-color: #FF7849;
+  color: #fff;
+}
 
 
 
+/* CLOUDS */
+svg {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+path{
+  fill: #85D7FF !important;
+}
+/**
+ * Clouds
+ */
+.clouds {
+  height: 600px;
+  margin-bottom: -400px;
+  overflow: hidden;
+  transform: translateZ(0);
+}
+
+.cloud {
+  position: absolute;
+  top: 20%;
+  width: 300px;
+  right: 0;
+  opacity: 1;
+}
+
+.cloud.front {
+  z-index: 9;
+}
+
+.cloud.distant {
+  z-index: 1;
+}
+
+.cloud.background {
+  z-index: 1;
+}
+
+/*Cloud Sizing*/
+.cloud.smaller {
+  margin-right: 400px;
+  width: 100px;
+  margin-top: 50px;
+}
+
+.cloud.small {
+  margin-right: 200px;
+  width: 150px;
+}
+
+.cloud.big {
+  width: 500px;
+  margin-top: 200px;
+  margin-right: 150px;
+}
+
+.cloud.massive {
+  width: 600px;
+  margin-top: 20px;
+  margin-right: 0px;
+}
 
 
+/*Cloud: Animation*/
+.cloud {
+  -webkit-animation-name: cloud-movement;
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-direction: forwards;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-duration: 8s;
 
+  -moz-animation-name: cloud-movement;
+  -moz-animation-timing-function: linear;
+  -moz-animation-direction: forwards;
+  -moz-animation-iteration-count: infinite;
+  -moz-animation-duration: 8s;
+
+  animation-name: cloud-movement;
+  animation-timing-function: linear;
+  animation-direction: forwards;
+  animation-iteration-count: infinite;
+  animation-duration: 8s;
+}
+
+.slow {
+  -webkit-animation-duration: 9.2s;
+  -moz-animation-duration: 9.2s;
+  animation-duration: 9.2s;
+}
+
+.slower {
+  -webkit-animation-duration: 11.2s;
+  -moz-animation-duration: 11.2s;
+  animation-duration: 11.2s;
+}
+
+.slowest {
+  -webkit-animation-duration: 13.5s;
+  -moz-animation-duration: 13.5s;
+  animation-duration: 13.5s;
+}
+
+.super-slow {
+  -webkit-animation-duration: 20.5s;
+  -moz-animation-duration: 20.5s;
+  animation-duration: 20.5s;
+}
+
+@-webkit-keyframes cloud-movement {
+  0% {
+    opacity: 0.1;
+    -webkit-transform: translateX(300px);
+    -moz-transform: translateX(300px);
+    transform: translateX(300px);
+  }
+  10% {
+
+    opacity: 0.7;
+  }
+  90% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateX(-1000px);
+    -moz-transform: translateX(-1000px);
+    transform: translateX(-1000px);
+  }
+}
 
 
 
